# task-lattice

./: README.md  publisher.py  pyproject.toml  worker.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  publish.yml
src/task_lattice/: __init__.py  app.py  broker.py  config.py  task.py  worker.py
src/task_lattice/broker/: solace.py
src/task_lattice/brokers/: solace.py
