[project]
name = "task-lattice"
version = "0.0.1a"
description = "Distributed Task Framework"
readme = "README.md"
authors = [
    { name = "Nicholas Williams", email = "noreply@users.noreply.github.com" }
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["tasks", "workflow", "dag", "distributed-tasks"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "solace-pubsubplus>=1.11.0",
]
